--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #8a2b06;
+  background-color: #fdf2e9;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -26,4 +26,8 @@
   height: 100%;
   object-fit: cover;
   transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+}
+
+.omnifood {
+  height: 1.6rem;
 }
