--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -8,6 +8,7 @@
   color: white;
   display: flex;
   justify-content: space-between;
+  gap: 4rem;
   align-items: center;
   padding: 0 10%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -30,4 +31,17 @@
 
 .omnifood {
   height: 1.6rem;
+}
+
+/* Media Queries */
+@media (max-width: 700px) {
+  .omnifood {
+    height: 1.3rem;
+  }
+}
+
+@media (max-width: 525px) {
+  .omnifood {
+    height: 1rem;
+  }
 }
