--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -57,3 +57,30 @@
     transform: scale(1);
   }
 }
+
+/* Media Queries */
+@media (max-width: 700px) {
+  .icon {
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.5rem;
+  }
+
+  .button {
+    font-size: 0.8rem;
+    padding: 0.5rem 2rem;
+  }
+}
+
+@media (max-width: 525px) {
+  .icon {
+    width: 0.8rem;
+    height: 0.8rem;
+    margin-right: 0.3rem;
+  }
+
+  .button {
+    font-size: 0.6rem;
+    padding: 0.3rem 1.5rem;
+  }
+}
