--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -16,3 +16,14 @@
   font-size: 2rem;
   margin-top: 0;
 }
+
+/* Media Queries */
+@media (max-width: 700px) {
+  .summary {
+    max-width: 30rem;
+    padding: 0.6rem;
+  }
+  .summary h2 {
+    font-size: 1.6rem;
+  }
+}
