--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -1,14 +1,10 @@
 .meals {
-  max-width: 60rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
   width: 90%;
   margin: 2rem auto;
   animation: meals-appear 1s ease-out forwards;
-}
-
-.meals ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 @keyframes meals-appear {
@@ -20,5 +16,21 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 1200px) {
+  .meals {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    row-gap: 2rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .meals {
+    display: grid;
+    grid-template-columns: auto;
   }
 }
