--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -1,22 +1,46 @@
 .meal {
   display: flex;
-  justify-content: space-between;
-  margin: 1rem;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid #ccc;
 }
 
-.meal h3 {
-  margin: 0 0 0.25rem 0;
-}
-
-.description {
-  font-style: italic;
+h3 {
+  /* margin: 0 0 1rem 0; */
+  margin: 0;
+  text-align: center;
 }
 
 .price {
+  text-align: center;
   margin-top: 0.25rem;
+  margin-bottom: 0.5rem;
   font-weight: bold;
   color: #ad5502;
   font-size: 1.25rem;
+}
+
+.data {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.image {
+  width: 100%;
+  border-radius: 20px;
+  box-shadow: 2px 0.7px #ccc;
+}
+
+@media (max-width: 350px) {
+  h3 {
+    font-size: 1rem;
+  }
+
+  .price {
+    font-size: 1rem;
+  }
 }
