--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -1,11 +1,11 @@
 .summary {
   text-align: center;
-  max-width: 45rem;
+  max-width: 35rem;
   width: 90%;
   margin: auto;
   margin-top: -10rem;
   position: relative;
-  background-color: #6f6f6f;
+  background-color: #383837;
   color: white;
   border-radius: 14px;
   padding: 1rem;
@@ -25,5 +25,27 @@
   }
   .summary h2 {
     font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 525px) {
+  .summary {
+    max-width: 20rem;
+    padding: 0.6rem;
+    line-height: 1.4rem;
+  }
+  .summary h2 {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 350px) {
+  .summary {
+    max-width: 16rem;
+    padding: 0.4rem;
+    line-height: 1.2rem;
+  }
+  .summary h2 {
+    font-size: 1rem;
   }
 }
