--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,6 +1,14 @@
 .card {
+  width: 100%;
+  height: 15rem;
   padding: 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   border-radius: 14px;
   background-color: white;
+}
+
+@media (max-width: 350px) {
+  .card {
+    padding: 0.6rem;
+  }
 }
